--- a/html-template/index.html
+++ b/html-template/index.html
@@ -49,13 +49,13 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="index.html"> About </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html"> Shop </a>
+                  <a class="nav-link" href="index.html"> Shop </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="glass.html"> Glasses </a>
+                  <a class="nav-link" href="index.html"> Glasses </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact us</a>
@@ -89,7 +89,7 @@
           Glasses
         </h6>
       </div>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -147,7 +147,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div>
+      </div> -->
     </section>
     <!-- end slider section -->
   </div>
