--- a/html-template/index.html
+++ b/html-template/index.html
@@ -89,7 +89,7 @@
           Glasses
         </h6>
       </div>
-      <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -147,7 +147,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div> -->
+      </div>
     </section>
     <!-- end slider section -->
   </div>
